name:                markets
version:             0.1.0.0
synopsis:            transactional markets
description:         transactional markets
homepage:            https://github.com/fumieval/markets#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2017 Fumiaki Kinoshita
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Market
  build-depends:       base, stm, heaps
  default-language:    Haskell2010
  default-extensions:
    TypeApplications
    , TypeFamilies
    , DataKinds
    , KindSignatures
    , FlexibleContexts
    , FlexibleInstances
    , Rank2Types
    , ScopedTypeVariables
    , GADTs
    , PolyKinds

executable markets-test
  hs-source-dirs:      app
  main-is:             Test.hs
  ghc-options:         -threaded
  build-depends:       base
                     , markets
                     , stm
                     , heaps
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/markets
